ran method 2 again, added visualization

--- a/Basic_Visualizations.ipynb
+++ b/Basic_Visualizations.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import heapq\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +170,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEWCAYAAABrDZDcAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGj1JREFUeJzt3XucHXV9//HXmyRIgEDALAiEsAgKRRSkq9CignIRubf9\nWaVgCaLxQhGq/ri1BbTVUosQ2+JPo6SABChy8YeiQrgID2ggbBLCJQGxECHcshAgREK4ffrHfFdO\n1r3MbnZmkv2+n4/Heezczsxn5pw97/OdmTOjiMDMzPK1TtMFmJlZsxwEZmaZcxCYmWXOQWBmljkH\ngZlZ5hwEZmaZcxBkRNKRkq5vuo5Wkr4g6WlJyyW9teJlhaTt+xhXettImizptuGtbs0k6UxJFzdc\nw6T0/hjVZB0jmYNgDSZpkaQV6Z/gKUkXSNqw5HPb0wff6O5hETEjIvavruLBkTQGOAfYPyI2jIhn\ne5lmmqQHJb0haXIv4/82bZtlkqZLestQalkTtk1/QbUa81wkad/hnGfdIuLR9P54velaRioHwZrv\nkIjYENgVeC9wasP1DKfNgfWA+/uZZj7wRWBuzxGSPgqcAuwDbAO8Hfja8Je5ZmoNebPV4SBYS0TE\nU8B1FIEAgKSDJM1L34Yfk3Rmy1NuTX+fTy2KP+m5SyN9A/28pIckPS/pPElK40ZJ+rakZyQ9Iulv\nWlsYaV4PS3oxjT+yt7olvUXSVElPpMfUNOydwIMtNd7Ux3qfFxE3Ai/3Mvpo4PyIuD8ingO+Dkwe\nYFPu28f69tw2+6eWyAuSvivpFkmf6bFuZ0t6Lq3/x1qGbyzpfElPSnpc0j9179aQtH2a1wtp2/5X\nGt79es1Pr9cnetmWkyXdLulcSc8CZ0raTtJNkp5N85shaXya/kfAJOCnaZ4npeF7SPrvtA3mS9q7\nZRnbpvpelDQTmNDXhpS0t6TFkk6StCSt7+GSDpT0a0lLJZ3WMn2v74U0bqGkg1umHS2pS9Ju6tG6\nHcr2tQFEhB9r6ANYBOybuicC9wLfaRm/N/BuikB/D/A0cHga1w4EMLpl+snAbS39AfwMGE/xgdEF\nHJDGfR5YkJa7CXBD9/yADYBlwA5p2i2Ad/WxDl8H7gA2A9qA/wb+sa8a+9kWtwGTewybD3yipf+t\naX5v7WMe/a3v77cNxYffMuDP0/qeALwKfKZl2leBzwKjgC8ATwBK468Gvp+202bAbOBzadylwN+l\n12w94AM96tu+n20wGXgNOD7VNRbYHtgPeEvavrcCU3t7D6X+rYBngQNTDful/rY0fhbF7rq3AB8C\nXgQu7qOevVM9pwNj0vboAi4BxgHvAlYA25Z4L5wOzGiZ90HAwt7eJ0Pdvn708//VdAF+9PPiFP/E\ny9M/YwA3AuP7mX4qcG7qXuWfJw2bzB8GQesH0eXAKan7pu5/rtS/L6sGwfPAXwBjB1iH/wEObOn/\nKLCorxr7mU9vQfA/pA/y1D8mza+9j3n0t76/3zbAXwOzWqYT8BirBsFvWsavn+b9NordXStbtwtw\nBHBz6r4ImAZM7KO+gYLg0QG20+HAvB7vodYgOBn4UY/nXEfRuppE8cG+Qcu4S+g/CFYAo1L/uLQO\nu7dMM4c3v5z0917YnuJ9vn7qnwGc3vN9sjrb14++H941tOY7PCLGUfzT7UhLU13S7pJuTk3oFyi+\nxffZlO/DUy3dLwHdB6O3pPjw6/b77oj4HfCJtLwnJV0racc+5r8l8NuW/t+mYcNhObBRS//G6e+L\n/Tynr/Vttcq6R/EJs7iv+UTES6lzQ4pjFWMotsvzkp6n+Pa6WZrmJIpgmS3pfkmf7qfW3rS+Jkja\nXNJlaRfJMuBi+n8PbAN8vLu2VN8HKFp1WwLPpde32297m0mLZ+PNg7gr0t+nW8avYNX3VK/vhYj4\nDbAQOETS+sChFCHUW/1Vbt8sOQjWEhFxC3ABcHbL4EuAa4CtI2Jj4HsU/wRQfINaHU9S7BbqtnWP\neq6LiP0oPkAeAH7Qx3yeoPjn7TYpDRsO9wO7tPTvAjwdvZx9NEirrHs6jjCx78lX8RjFN9YJETE+\nPTaKiHdBcawnIj4bEVsCnwO+q8GdKdTzdf1mGvbuiNgIOIo33wO9Tf8YRYtgfMtjg4g4i2K9N5G0\nQcv0kwZR20AGei9cSvHt/jBgQQqHnqrevllyEKxdpgL7Ser+8BsHLI2IlyW9H/irlmm7gDcozqQZ\nisuBEyRtlQ4+ntw9In0LPSx9YKyk+Gb+Rh/zuRT4e0ltkiZQ7AsufV66pHUlrUfx4TZG0nqSut+3\nFwHHStpJ0ibAP1CE5eq6Fnh3OvA5GjiOYrfPgCLiSeB64NuSNpK0Tjqgu1dan49L6g6V5yg+qLu3\n3dMM/vUaR7H9X5C0FfB/e4zvOc+LKb51f1TFCQHrpYO+EyPit0An8LW03T8AHDLIevoz0HvhMmB/\nimMuvbUGVnf7Wh8cBGuRiOii+PA7PQ36IvB1SS+mYZe3TPsS8A3g9tSE3mOQi/sBxT/cPcA84OcU\n+49fp3jffJni29xSYC+Kf97e/BPFh8s9FAe756ZhZV1PsXvhTyn2/a6gOIhJRPwS+BZwM8VuhkeA\nMwYx715FxDPAx9O8nwV2SuuwsuQs/hpYl+Jg+3PAFRQtJ4D3AXdKWk7RmjshIh5O484ELkyv11+W\nXNbXgN2AFygC7Koe4/+Z4sP3eUlfjYjHKL5xn0bxZeExivDo/iz4K2B3itf1DIr323Dp972QPuRn\nUbzW/Z3tM9Tta33oPsvBrF8qTo/8XkRsM+DEI0xqgSwGjoyIm5uux2y4uUVgvZI0Np0PPjrtcjiD\n4rS9LKRdJ+PTee6nUeyauqPhsswq4SCwvohit8NzFLuGFvLmLqkc/AnF6Y7PUOwnPzwiVvT/FLO1\nk3cNmZllzi0CM7PMrRUXrZowYUK0t7c3XYaZ2Vplzpw5z0RE20DTrRVB0N7eTmdnZ9NlmJmtVSQN\n9MtwwLuGzMyy5yAwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8tcZUEgaXq6j+l9PYYfL+mBdNOIb1W1\nfDMzK6fKFsEFwAGtAyR9mOISuLukG0mc3cvzzMysRpUFQUTcSnFN81ZfAM6KiJVpmiVVLd/MzMqp\n+5fF7wQ+KOkbwMvAVyPirt4mlDQFmAIwadJw3i3PzNZW7adc23QJtVt01kGVL6Pug8WjgU2BPSju\ninR5uh/sH4iIaRHREREdbW0DXirDzMyGqO4gWAxcFYXZFPcSnVBzDWZm1qLuIPgJ8GEASe+kuO/o\nMzXXYGZmLSo7RiDpUmBvYIKkxRS3OpwOTE+nlL4CHB2+M46ZWaMqC4KIOKKPUUdVtUwzMxs8/7LY\nzCxzDgIzs8w5CMzMMucgMDPLnIPAzCxzDgIzs8w5CMzMMucgMDPLnIPAzCxzDgIzs8w5CMzMMucg\nMDPLnIPAzCxzDgIzs8w5CMzMMucgMDPLXGVBIGm6pCXpbmQ9x31FUkjy/YrNzBpWZYvgAuCAngMl\nbQ3sDzxa4bLNzKykyoIgIm4FlvYy6lzgJMD3KjYzWwPUeoxA0mHA4xExv87lmplZ3yq7eX1PktYH\nTqPYLVRm+inAFIBJkyZVWJmZWd7qbBFsB2wLzJe0CJgIzJX0tt4mjohpEdERER1tbW01lmlmlpfa\nWgQRcS+wWXd/CoOOiHimrhrMzOwPVXn66KXALGAHSYslHVvVsszMbOgqaxFExBEDjG+vatlmZlae\nf1lsZpY5B4GZWeYcBGZmmXMQmJllzkFgZpY5B4GZWeYcBGZmmXMQmJllzkFgZpY5B4GZWeYcBGZm\nmXMQmJllzkFgZpY5B4GZWeYcBGZmmXMQmJllzkFgZpa5Km9VOV3SEkn3tQz7V0kPSLpH0tWSxle1\nfDMzK6fKFsEFwAE9hs0Edo6I9wC/Bk6tcPlmZlZCZUEQEbcCS3sMuz4iXku9dwATq1q+mZmV0+Qx\ngk8Dv+hrpKQpkjoldXZ1ddVYlplZXhoJAkl/B7wGzOhrmoiYFhEdEdHR1tZWX3FmZpkZXfcCJU0G\nDgb2iYioe/lmZraqWoNA0gHAScBeEfFSncs2M7PeVXn66KXALGAHSYslHQv8BzAOmCnpbknfq2r5\nZmZWTmUtgog4opfB51e1PDMzGxr/stjMLHMOAjOzzDkIzMwy5yAwM8ucg8DMLHMOAjOzzDkIzMwy\n5yAwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8ucg8DMLHOlgkDS\nuwc7Y0nTJS2RdF/LsE0lzZT0UPq7yWDna2Zmw6tsi+C7kmZL+qKkjUs+5wLggB7DTgFujIh3ADem\nfjMza1CpIIiIDwJHAlsDcyRdImm/AZ5zK7C0x+DDgAtT94XA4YMr18zMhlvpYwQR8RDw98DJwF7A\nv0l6QNKfD2J5m0fEk6n7KWDzviaUNEVSp6TOrq6uQSzCzMwGo+wxgvdIOhdYCHwEOCQi/ih1nzuU\nBUdEANHP+GkR0RERHW1tbUNZhJmZlVC2RfDvwFxgl4g4LiLmAkTEExSthLKelrQFQPq7ZDDFmpnZ\n8CsbBAcBl0TECgBJ60haHyAifjSI5V0DHJ26jwb+/yCea2ZmFSgbBDcAY1v610/D+iTpUmAWsIOk\nxZKOBc4C9pP0ELBv6jczswaNLjndehGxvLsnIpZ3twj6EhFH9DFqn7LFmZlZ9cq2CH4nabfuHkl/\nDKyopiQzM6tT2RbBicCPJT0BCHgb8InKqjIzs9qUCoKIuEvSjsAOadCDEfFqdWWZmVldyrYIAN4H\ntKfn7CaJiLiokqrMzKw2pYJA0o+A7YC7gdfT4AAcBGZma7myLYIOYKf0a2AzMxtByp41dB/FAWIz\nMxthyrYIJgALJM0GVnYPjIhDK6nKzMxqUzYIzqyyCDMza07Z00dvkbQN8I6IuCH9qnhUtaWZmVkd\nyl6G+rPAFcD306CtgJ9UVZSZmdWn7MHi44A9gWXw+5vUbFZVUWZmVp+yQbAyIl7p7pE0mn5uKmNm\nZmuPskFwi6TTgLHpXsU/Bn5aXVlmZlaXskFwCtAF3At8Dvg5g7szmZmZraHKnjX0BvCD9DAzsxGk\n7LWGHqGXYwIR8fZhr8jMzGo1mGsNdVsP+Diw6VAXKulvgc9QhMu9wDER8fJQ52dmZkNX6hhBRDzb\n8ng8IqZS3NB+0CRtBXwJ6IiInSl+mPbJoczLzMxWX9ldQ7u19K5D0UIYzL0MelvuWEmvAusDT6zG\nvMzMbDWU/TD/dkv3a8Ai4C+HssCIeFzS2cCjFPc9vj4iru85naQpwBSASZMmDWVRZmZWQtmzhj48\nXAuUtAlwGLAt8DzFvZCPioiLeyxzGjANoKOjwz9eMzOrSNldQ1/ub3xEnDOIZe4LPBIRXWneVwF/\nClzc77PMzKwSgzlr6H3ANan/EGA28NAQlvkosEe6gukKYB+gcwjzMTOzYVA2CCYCu0XEiwCSzgSu\njYijBrvAiLhT0hXAXIrjDfNIu4DMzKx+ZYNgc+CVlv5X0rAhiYgzgDOG+nwzMxs+ZYPgImC2pKtT\n/+HAhdWUZGZmdSp71tA3JP0C+GAadExEzKuuLDMzq0vZq49C8cOvZRHxHWCxpG0rqsnMzGpU9laV\nZwAnA6emQWPw6Z5mZiNC2RbBnwGHAr8DiIgngHFVFWVmZvUpGwSvRESQLkUtaYPqSjIzszqVDYLL\nJX0fGC/ps8AN+CY1ZmYjQtmzhs5O9ypeBuwAnB4RMyutzMzMajFgEEgaBdyQLjznD38zsxFmwF1D\nEfE68IakjWuox8zMalb2l8XLgXslzSSdOQQQEV+qpCozM6tN2SC4Kj3MzGyE6TcIJE2KiEcjwtcV\nMjMboQY6RvCT7g5JV1Zci5mZNWCgIFBL99urLMTMzJoxUBBEH91mZjZCDHSweBdJyyhaBmNTN6k/\nImKjSqszM7PK9RsEETGqioVKGg/8ENiZoqXx6YiYVcWyzMysf2VPHx1u3wF+GRH/R9K6FPc6MDOz\nBtQeBOkXyh8CJgNExCusej9kMzOr0WDuUDZctgW6gP+UNE/SD3u7rLWkKZI6JXV2dXXVX6WZWSaa\nCILRwG7A/4uI91JcsuKUnhNFxLSI6IiIjra2trprNDPLRhNBsBhYHBF3pv4rKILBzMwaUHsQRMRT\nwGOSdkiD9gEW1F2HmZkVmjpr6HhgRjpj6GHgmIbqMDPLXiNBEBF3Ax1NLNvMzFbVxDECMzNbgzgI\nzMwy5yAwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8ucg8DMLHMO\nAjOzzDkIzMwy5yAwM8ucg8DMLHMOAjOzzDUWBJJGSZon6WdN1WBmZs22CE4AFja4fDMzo6EgkDQR\nOAj4YRPLNzOzNzXVIpgKnAS80dcEkqZI6pTU2dXVVV9lZmaZqT0IJB0MLImIOf1NFxHTIqIjIjra\n2tpqqs7MLD9NtAj2BA6VtAi4DPiIpIsbqMPMzGggCCLi1IiYGBHtwCeBmyLiqLrrMDOzgn9HYGaW\nudFNLjwifgX8qskazMxy5xaBmVnmHARmZplzEJiZZc5BYGaWOQeBmVnmHARmZplzEJiZZc5BYGaW\nOQeBmVnmHARmZplzEJiZZc5BYGaWOQeBmVnmHARmZplzEJiZZc5BYGaWOQeBmVnmag8CSVtLulnS\nAkn3Szqh7hrMzOxNTdyq8jXgKxExV9I4YI6kmRGxoIFazMyyV3uLICKejIi5qftFYCGwVd11mJlZ\nodFjBJLagfcCd/YyboqkTkmdXV1ddZdmZpaNxoJA0obAlcCJEbGs5/iImBYRHRHR0dbWVn+BZmaZ\naCQIJI2hCIEZEXFVEzWYmVmhibOGBJwPLIyIc+pevpmZraqJFsGewKeAj0i6Oz0ObKAOMzOjgdNH\nI+I2QHUv18zMeudfFpuZZc5BYGaWOQeBmVnmHARmZplzEJiZZc5BYGaWOQeBmVnmHARmZplzEJiZ\nZc5BYGaWOQeBmVnmHARmZplzEJiZZc5BYGaWOQeBmVnmHARmZplzEJiZZa6pm9cfIOlBSb+RdEoT\nNZiZWaGJm9ePAs4DPgbsBBwhaae66zAzs0ITLYL3A7+JiIcj4hXgMuCwBuowMzMauHk9sBXwWEv/\nYmD3nhNJmgJMSb3LJT1YQ23DbQLwTNNF1Ci39QWvcy4aW2f9y2o9fZsyEzURBKVExDRgWtN1rA5J\nnRHR0XQddcltfcHrnIuRvs5N7Bp6HNi6pX9iGmZmZg1oIgjuAt4haVtJ6wKfBK5poA4zM6OBXUMR\n8ZqkvwGuA0YB0yPi/rrrqMlavWtrCHJbX/A652JEr7MioukazMysQf5lsZlZ5hwEZmaZcxBUQNJ0\nSUsk3dd0LXWQtLWkmyUtkHS/pBOarqlqktaTNFvS/LTOX2u6pjpIGiVpnqSfNV1LXSQtknSvpLsl\ndTZdTxV8jKACkj4ELAcuioidm66napK2ALaIiLmSxgFzgMMjYkHDpVVGkoANImK5pDHAbcAJEXFH\nw6VVStKXgQ5go4g4uOl66iBpEdARESP2R3RuEVQgIm4FljZdR10i4smImJu6XwQWUvyCfMSKwvLU\nOyY9RvS3KkkTgYOAHzZdiw0vB4ENK0ntwHuBO5utpHppN8ndwBJgZkSM9HWeCpwEvNF0ITUL4AZJ\nc9Klb0YcB4ENG0kbAlcCJ0bEsqbrqVpEvB4Ru1L8Ov79kkbsbkBJBwNLImJO07U04APpdf4YcFza\n9TuiOAhsWKT95FcCMyLiqqbrqVNEPA/cDBzQdC0V2hM4NO0vvwz4iKSLmy2pHhHxePq7BLia4grK\nI4qDwFZbOnB6PrAwIs5pup46SGqTND51jwX2Ax5otqrqRMSpETExItopLgtzU0Qc1XBZlZO0QToB\nAkkbAPsDI+5sQAdBBSRdCswCdpC0WNKxTddUsT2BT1F8S7w7PQ5suqiKbQHcLOkeiutnzYyIbE6p\nzMjmwG2S5gOzgWsj4pcN1zTsfPqomVnm3CIwM8ucg8DMLHMOAjOzzDkIzMwy5yAwM8ucg8BGBEmv\np9NW75P00+5z/PuZfrykL7b0bynpiuorNVvz+PRRGxEkLY+IDVP3hcCvI+Ib/UzfDvxsbbg6rKTR\nEfFa03XYyOUWgY1Es0hXP5W0oaQbJc1N15Q/LE1zFrBdakX8q6T27vtHSJos6SpJv5T0kKRvdc9Y\n0rGSfp3uRfADSf/Rc+GS9mr5Yd28ll+mnpxqmC/prDRsV0l3SLpH0tWSNknDfyVparr+/Qnpl8xX\nSrorPfascgNaXmq/eb1ZlSSNAvahuOQFwMvAn0XEMkkTgDskXQOcAuycLibW3UJotSvFVVRXAg9K\n+nfgdeAfgN2AF4GbgPm9lPFV4LiIuD1diO9lSR8DDgN2j4iXJG2apr0IOD4ibpH0deAM4MQ0bt2I\n6Ej1XQKcGxG3SZoEXAf80dC2ktmqHAQ2UoxNl4TeiuJ+CDPTcAHfTFeMfCON37zE/G6MiBcAJC0A\ntgEmALdExNI0/MfAO3t57u3AOZJmAFdFxGJJ+wL/GREvAUTEUkkbA+Mj4pb0vAuBH7fM579auvcF\ndiou6wTARpI2bLkngtmQedeQjRQr0rf7bSg+/I9Lw48E2oA/TuOfBtYrMb+VLd2vM4gvTRFxFvAZ\nYCxwu6Qdyz63h9+1dK8D7BERu6bHVg4BGy4OAhtR0jfuLwFfkTQa2JjiOvqvSvowRVBAsWtn3CBn\nfxewl6RN0rz/oreJJG0XEfdGxL+k5+xI0UI5RtL6aZpNU4vjOUkfTE/9FHBLb/MErgeOb1nGroOs\n3axP3jVkI05EzEtXBT0CmAH8VNK9QCfpUtER8ayk29MB4l8A55WY7+OSvklxFcqlaV4v9DLpiSl0\n3gDuB34RESvTh3enpFeAnwOnAUcD30sB8TBwTB+L/xJwXlqv0cCtwOdLbA6zAfn0UbNB6N4vn1oE\nVwPTI+LqpusyWx3eNWQ2OGemg9L3AY8AP2m4HrPV5haBmVnm3CIwM8ucg8DMLHMOAjOzzDkIzMwy\n5yAwM8vc/wJV92rg+kTrOQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x110044f98>"
+       "<matplotlib.figure.Figure at 0x111126978>"
       ]
      },
      "metadata": {},
@@ -185,12 +184,10 @@
     "    movie_ratings = Y[:, j]\n",
     "    avg_rating = np.mean(movie_ratings[np.nonzero(movie_ratings)])\n",
     "    avg_ratings.append(avg_rating)\n",
-    "avg_ratings = np.array(avg_ratings)\n",
     "popularities = sorted(zip(movie_ids, avg_ratings),key = lambda x: x[1], reverse=True)\n",
-    "top_ids, top_ratings = zip(*popularities[:10])\n",
-    "# best_indices = heapq.nlargest(10, range(N), avg_ratings.take)\n",
+    "top_ids, top_avg_ratings = zip(*popularities[:10])\n",
+    "\n",
     "highest10ratings = [line[2] for line in user_data if line[1] in top_ids]\n",
-    "# print(avg_ratings)\n",
     "movie_names = [line[1] for line in movie_desc if int(line[0]) in top_ids]\n",
     "print(movie_names)\n",
     "print(top_ratings)\n",
@@ -200,23 +197,6 @@
     "plt.xlabel('Rating score')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(n_reviews)"
    ]
   },
   {
