corrected the plots for genres

--- a/Matrix_Factorization_Vizualization.ipynb
+++ b/Matrix_Factorization_Vizualization.ipynb
@@ -500,6 +500,8 @@
     "comedy = []\n",
     "fantasy = []\n",
     "for line in movies:\n",
+    "    if len(action) >= 10 and len(comedy) >= 10 and len(fantasy):\n",
+    "        \n",
     "    if line[3] == \"1\":\n",
     "        action.append(line[0]) # append movie id\n",
     "    elif line[7] == \"1\":\n",
@@ -519,22 +521,6 @@
    "metadata": {},
    "source": [
     "## Visualize Method 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plot_projections(U_method2, V_method2)\n",
-    "\n",
-    "movie_ids, counts = np.unique(Y_total[:,1], return_counts=True)\n",
-    "popularities = sorted(zip(movie_ids, counts),key = lambda x: x[1])\n",
-    "top_ids, top_counts = zip(*popularities[-10:])\n",
-    "plot_projections(U_method1, V_method1, False, np.array(top_ids, dtype='int') - 1)"
    ]
   },
   {
